--- a/git.html
+++ b/git.html
@@ -24,7 +24,7 @@
         <li>从其他服务器克隆一个已经存在的Git仓库</li>
     </ul>
     <div>git.init命令会创建一个名为.git的隐藏目录，这个.git隐藏目录就是当前的git仓库，里面包含了初始化的必要文件，这些文件是Git仓库的必要组成部分</div>
-    <div>工作区中文件的四种状态：未被管理、已修改、未修改、已暂存用git status（简单的git status -s或git status -short）查看文件处于什么状态，未被跟踪的文件Git不会自动纳入跟踪范围,跟踪新文件git add +文件名
+    <div>工作区中文件的四种状态：未被管理、已修改、未修改、已暂存用git status（简单的git status -s或git status -short）查看文件处于什么状态，未被跟踪的文件Git不会自动纳入跟踪范围,跟踪新文件git add +文件名，git commit -m "说明" 提交到git仓库中
     </div>
 </body>
 
