--- a/git.html
+++ b/git.html
@@ -24,8 +24,11 @@
         <li>从其他服务器克隆一个已经存在的Git仓库</li>
     </ul>
     <div>git.init命令会创建一个名为.git的隐藏目录，这个.git隐藏目录就是当前的git仓库，里面包含了初始化的必要文件，这些文件是Git仓库的必要组成部分</div>
-    <div>工作区中文件的四种状态：未被管理、已修改、未修改、已暂存用git status（简单的git status -s或git status -short）查看文件处于什么状态，未被跟踪的文件Git不会自动纳入跟踪范围,跟踪新文件git add +文件名，git commit -m "说明" 提交到git仓库中
+    <div>工作区中文件的四种状态：未被管理、已修改、未修改、已暂存用git status（简单的git status -s或git status -short）查看文件处于什么状态，未被跟踪的文件Git不会自动纳入跟踪范围,跟踪新文件git add +文件名，添加多个文件git add . ;git commit -m "提交消息" 提交到git仓库中
     </div>
+    <div>modified已跟踪的文件内容发生了变化还未被放到暂存区git add：开始跟踪新文件；把已跟踪已修改的文件放到暂存区；把有冲突的文件标记为已解决状态</div>
+    <div>撤销对文件的修改：把工作区中对应文件的修改，还原成git仓库中保存的版本，操作结果：所有修改会丢失，危险性比较高，git checkout --git.html</div>
+    <div>跳过使用暂存区域 git commit -a -m "描述消息"</div>
 </body>
 
 </html>
