--- a/git.html
+++ b/git.html
@@ -29,6 +29,7 @@
     <div>modified已跟踪的文件内容发生了变化还未被放到暂存区git add：开始跟踪新文件；把已跟踪已修改的文件放到暂存区；把有冲突的文件标记为已解决状态</div>
     <div>撤销对文件的修改：把工作区中对应文件的修改，还原成git仓库中保存的版本，操作结果：所有修改会丢失，危险性比较高，git checkout --git.html</div>
     <div>跳过使用暂存区域 git commit -a -m "描述消息"</div>
+    <div>1</div>
 </body>
 
 </html>
