--- a/git.html
+++ b/git.html
@@ -29,7 +29,8 @@
     <div>modified已跟踪的文件内容发生了变化还未被放到暂存区git add：开始跟踪新文件；把已跟踪已修改的文件放到暂存区；把有冲突的文件标记为已解决状态</div>
     <div>撤销对文件的修改：把工作区中对应文件的修改，还原成git仓库中保存的版本，操作结果：所有修改会丢失，危险性比较高，git checkout --git.html</div>
     <div>跳过使用暂存区域 git commit -a -m "描述消息"</div>
-    <div>1</div>2
+    <div>取消暂存的文件 git reset HEAD 要移除的文件名</div>
+    <div>从git仓库中移除文件有两种方式：从git仓库和工作区同时移除对应文件；从git仓库中移除指定的文件git rm -f 文件名称，但是在工作区保留相应的文件git rm --cached 文件名</div>
 </body>
 
 </html>
