--- a/git.html
+++ b/git.html
@@ -31,7 +31,9 @@
     <div>跳过使用暂存区域 git commit -a -m "描述消息"（对已跟踪文件进行修改后有用，对从未跟踪的文件无效的）</div>
     <div>取消暂存的文件 git reset HEAD 要移除的文件名</div>
     <div>从git仓库中移除文件有两种方式：从git仓库和工作区同时移除对应文件；从git仓库中移除指定的文件git rm -f 文件名称，但是在工作区保留相应的文件git rm --cached 文件名</div>
-    <div>忽略文件：创建一个.gitignore的配置文件，列出要忽略的文件匹配模式1.以#开头的都是注释2.以/结尾的都是目录3.以/开头的防止递归4.以!开头的都是取反。可以使用glob模式进行文件和文件夹的匹配，glob简化了的正则表达式*匹配0个或多个任意字符；[abc]匹配任意一个在方括号中的字符；？值匹配一个任意字符；方括号中使用短划线两个字符范围内都可以匹配；两个*匹配任意中间目录a/**/z最后把gitignore提交到git仓库中</div>
+    <div>忽略文件：创建一个.gitignore的配置文件，列出要忽略的文件匹配模式1.以#开头的都是注释2.以/结尾的都是目录3.以/开头的防止递归4.以!开头的都是取反。可以使用glob模式进行文件和文件夹的匹配，glob简化了的正则表达式*匹配0个或多个任意字符；[abc]匹配任意一个在方括号中的字符；？值匹配一个任意字符；方括号中使用短划线两个字符范围内都可以匹配；两个*匹配任意中间目录a/**/z最后把gitignore提交到git仓库中 </div>
+    <div>查看提交历史git log 查看最近提交的几个文件 git log -2 在一行上展示最近提交的历史信息 git log -2 --pretty=oneline自定义输格式git log -2 --pretty=format:"%h（提交简写哈希值）|%an（作者）|%ar（修订日期）|%s（提交说明）"，按键q停止查看</div>
+    <div>退回到指定的版本：git log --pretty=oneline 找到版本标识符 使用git reset --hard commitID在旧版本中运行git reflog --pretty=oneline获取所有提交历史</div>
 </body>
 
 </html>
